# flexd

./: .gitignore  Cargo.toml  README.md  flexd.conf.example  flexible-webserver-local-0.2.3.osc.md  osc.osc.md
proptest-regressions/: acme.txt
src/: absplit.rs  acme.rs  balance.rs  config.rs  geoip.rs  handler.rs  lib.rs  logging.rs  main.rs  proxy.rs  resolver.rs  rewrite.rs  server.rs  static_file.rs  tls.rs
src/security/: headers.rs  host_policy.rs  limits.rs  privilege.rs  rate_limit.rs  upstream_filter.rs  uri_validate.rs
tests/: integration.rs
